fix(Search): correct "clear" icon alignment
Closes #166

--- a/src/helix-ui/elements/_hx-search.less
+++ b/src/helix-ui/elements/_hx-search.less
@@ -69,6 +69,7 @@
     color: @gray-700;
     cursor: pointer;
     flex-shrink: 0;
+    line-height: 1;
     order: 3;
     padding: 0.5rem;
     z-index: 1;
